# escpos-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/workflows/: CI.yml
.zed/: settings.json
examples/: EXAMPLES.md  bidi.rs  codes.rs  debug.rs  full.rs  hidapi.rs  native_usb.rs  no_std_codes.rs  page_codes.rs  pictures.rs  receipt.rs  sample.rs  serial_port.rs  status.rs  ui.rs  usb.rs  usbprint.rs  windows_driver.rs
examples/tauri-app/: README.md  package-lock.json  package.json
examples/tauri-app/src/: index.html  main.js
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/src/: lib.rs  printer.rs
src/: encoder.rs  errors.rs  lib.rs  printer.rs  printer_options.rs
src/domain/: barcodes.rs  bidi.rs  bit_image.rs  character.rs  common.rs  constantes.rs  constants.rs  graphics.rs  mod.rs  page_codes.rs  protocol.rs  qrcode.rs  status.rs  types.rs
src/domain/codes/: aztec.rs  barcodes.rs  data_matrix.rs  gs1_databar.rs  gs1_databar_2d.rs  maxi_code.rs  mod.rs  pdf417.rs  qrcode.rs
src/domain/protocol/: font.rs  mod.rs  text.rs
src/domain/ui/: line.rs  mod.rs
src/io/: driver.rs  encoder.rs  mod.rs
src/io/driver/: windows_driver.rs
src/io/driver/windows_driver/: windows_printer.rs
