[package]
authors = ["Fabien Bellanger <valentil@gmail.com>"]
description = "ESC/POS printer driver"
documentation = "https://docs.rs/escpos"
edition = "2024"
homepage = "https://github.com/fabienbellanger/escpos-rs"
keywords = ["esc", "printer", "driver", "pos", "usb"]
license = "MIT"
name = "escpos"
readme = "README.md"
repository = "https://github.com/fabienbellanger/escpos-rs"
rust-version = "1.85"
version = "0.17.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
barcodes = []
codes_2d = []
graphics = ["dep:image"]
hidapi = ["dep:hidapi"]
serial_port = ["dep:serialport"]
usb = ["dep:rusb"]
native_usb = ["dep:nusb"]
ui = []
bidi = ["dep:unicode-bidi"]
default = ["barcodes", "codes_2d"]
full = [
    "barcodes",
    "codes_2d",
    "graphics",
    "usb",
    "native_usb",
    "hidapi",
    "serial_port",
    "ui",
    "bidi",
]

[dependencies]
encoding_rs = "0.8.35"
log = "0.4.28"

hidapi = { version = "2.6.3", optional = true }
image = { version = "0.25.8", optional = true }
nusb = { version = "0.2.0", optional = true }
rusb = { version = "0.9.4", optional = true }
serialport = { version = "4.7.3", optional = true }
unicode-bidi = { version = "0.3", optional = true }

[dev-dependencies]
env_logger = "0.11.8"
reqwest = { version = "0.12.23", features = ["blocking"] }

[package.metadata.docs.rs]
all-features = true
