[package]
authors = ["Fabien Bellanger <valentil@gmail.com>"]
description = "ESC/POS printer driver"
documentation = "https://docs.rs/escpos"
edition = "2024"
homepage = "https://github.com/fabienbellanger/escpos-rs"
keywords = ["esc", "printer", "driver", "pos", "usb"]
license = "MIT"
name = "escpos"
readme = "README.md"
repository = "https://github.com/fabienbellanger/escpos-rs"
rust-version = "1.88.0"
version = "0.17.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
barcodes = []
codes_2d = []
graphics = ["dep:image"]
hidapi = ["dep:hidapi"]
serial_port = ["dep:serialport"]
usb = ["dep:rusb"]
native_usb = ["dep:nusb"]
ui = []
default = ["barcodes", "codes_2d"]
full = [
    "barcodes",
    "codes_2d",
    "graphics",
    "usb",
    "native_usb",
    "hidapi",
    "serial_port",
    "ui",
]

[dependencies]
encoding_rs = "0.8.35"
log = "0.4.29"

hidapi = { version = "2.6.6", optional = true }
image = { version = "0.25.10", optional = true }
nusb = { version = "0.2.3", optional = true }
rusb = { version = "0.9.4", optional = true }
serialport = { version = "4.9.0", optional = true }

[dev-dependencies]
env_logger = "0.11.10"
reqwest = { version = "0.13.3", features = ["blocking"] }

[package.metadata.docs.rs]
all-features = true
